# treedb-project-memory

./: .gitignore  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
docs/: benchmarks.md  concepts.md  configuration.md  development.md  limitations.md  local-service.md  metadata-schema.md  packaging.md  source-types.md  ui.md
examples/: README.md
examples/docs-folder/: README.md
examples/docs-folder/.treedb-project-memory/: config.yaml
examples/docs-folder/docs/: guide.md  notes.txt
examples/multi-source-workspace/: README.md
examples/multi-source-workspace/.treedb-project-memory/: config.yaml
examples/multi-source-workspace/docs/: runbook.md
examples/multi-source-workspace/exports/: tickets.jsonl
examples/multi-source-workspace/service/: README.md  main.py
examples/simple-repo/: README.md
examples/simple-repo/.treedb-project-memory/: config.yaml
examples/simple-repo/sample-repo/: README.md
examples/simple-repo/sample-repo/src/: app.py
scripts/: check_markdown_links.py  quickstart_smoke.sh
tests/: test_benchmarks.py  test_bootstrap.py  test_config_cli.py  test_docs_examples.py  test_indexing.py  test_retrieval.py  test_sources_chunking.py  test_ui.py
treedb_project_memory/: __init__.py  answers.py  benchmarks.py  chunking.py  citations.py  cli.py  config.py  embedding.py  indexing.py  retrieval.py  sources.py  state.py  treedb_adapter.py  ui.py
